# DeerDuke

./: README.md  pyproject.toml
crawler/: dispatch_spider.py  fc2_spider.py  jav_spider.py  spider.py
storage/: __init__.py  regulate_handler.py
variety/: __init__.py  fc2.py  jav.py  madou.py
