[tool.poetry]
name = "deerduke"
version = "0.1.0"
description = ""
authors = ["nzooherd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.9"
mechanicalsoup = "^1.3.0"
cloudscraper = "^1.2.71"
watchdog = "^3.0.0"
pyyaml = "^6.0.1"
schema = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
